<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.geosolutions.towngeocoder</groupId>
	<artifactId>towngeocoder</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>batchgeocoder</name>
	<description>geocode and reverse geocode location</description>

	<organization>
		<name>GeoSolutions</name>
		<url>http://www.geo-solutions.it</url>
	</organization>

	<!-- <licenses> -->
	<!-- <license> -->
	<!-- <name>Apache License Version 2.0</name> -->
	<!-- <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url> -->
	<!-- </license> -->
	<!-- </licenses> -->

	<developers>
		<developer>
			<id>fds</id>
			<name>Damiano Giampaoli</name>
			<email>damianofds@gmail.com</email>
			<organization>GeoSolutions</organization>
			<organizationUrl>http://www.geo-solutions.it</organizationUrl>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>


	<dependencies>
		<dependency>
			<groupId>com.vividsolutions</groupId>
			<artifactId>jts</artifactId>
			<version>1.12</version>
		</dependency>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>fr.dudie</groupId>
			<artifactId>nominatim-api</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.6</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>

			<!-- compilation -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<debug>true</debug>
					<encoding>UTF-8</encoding>
					<!-- On the win32 build box the compiler oom's due to the compiler accumulating 
						too many classes in the permanent generation, similar to GEOT-2462 -->
					<fork>${fork.javac}</fork>
					<maxmem>${javac.maxHeapSize}</maxmem>
				</configuration>
			</plugin>

			<!-- resources -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- unit testing -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<source>1.5</source>
					<target>1.5</target>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<excludes>
						<exclude>${test.exclude.pattern}</exclude>
					</excludes>
					<forkMode>once</forkMode>
					<argLine>-Xmx${test.maxHeapSize}
						-XX:MaxPermSize=${test.maxPermSize} -enableassertions ${jvm.opts}
						-Djava.awt.headless=${java.awt.headless}
						-DremoteOwsTests=${remoteOwsTests}</argLine>
					<printSummary>true</printSummary>
					<testFailureIgnore>${allow.test.failure.ignore}</testFailureIgnore>
				</configuration>
			</plugin>

			<!-- eclipse ide integration -->
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<!--downloadSources>true</downloadSources -->
					<additionalProjectnatures>
						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
					</additionalProjectnatures>
				</configuration>
			</plugin>

			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>